Added copyright info

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,3 +1,7 @@
+/*
+ * Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
+ */
+
 apply plugin: 'com.android.application'
 
 apply plugin: 'kotlin-android'
