--- a/gradle/wrapper/gradle-wrapper.properties
+++ b/gradle/wrapper/gradle-wrapper.properties
@@ -1,3 +1,7 @@
+#
+# Copyright (c) 2019 . Wilberforce Uwadiegwu. All Rights Reserved.
+#
+
 #Fri Mar 22 00:59:12 WAT 2019
 distributionBase=GRADLE_USER_HOME
 distributionPath=wrapper/dists
