--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,8 @@ captures/
 # External native build folder generated in Android Studio 2.2 and later
 .externalNativeBuild
 
+# Google Services (e.g. APIs or Firebase)
+ google-services.json
 
 # lint
 lint/intermediates/
@@ -57,3 +59,4 @@ lint/generated/
 lint/outputs/
 lint/tmp/
 # lint/reports/
+/app/google-services.json
