--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,10 +38,12 @@ dependencies {
     implementation 'com.google.firebase:firebase-core:16.0.8'
     implementation 'com.google.firebase:firebase-crash:16.2.1'
     implementation 'com.jakewharton.timber:timber:4.7.1'
-    implementation 'com.google.firebase:firebase-ads:17.2.0'
+    //implementation 'com.google.firebase:firebase-ads:17.2.0'
     implementation 'androidx.annotation:annotation:1.0.2'
+    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
+    implementation "androidx.navigation:navigation-fragment-ktx:2.1.0-alpha01"
+    implementation "androidx.navigation:navigation-ui-ktx:2.1.0-alpha01"
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.1.2-alpha02'
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.2.0-alpha02'
-    implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
 }
