--- a/gradle.properties
+++ b/gradle.properties
@@ -23,3 +23,7 @@ android.useAndroidX=true
 android.enableJetifier=true
 # Kotlin code style for this project: "official" or "obsolete":
 kotlin.code.style=official
+# https://developer.android.com/topic/libraries/data-binding/start
+android.databinding.enableV2=true
+android.enableUnitTestBinaryResources=true
+
