--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,11 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jadebyte.jadeplayer">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- For Glide to restart connection requests when internet comes up -->
+    <uses-permission android:name="android.permission.INTERNET" /> <!-- For Glide to restart connection requests when internet comes up -->
     <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE"/>
-
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <application
         android:name=".common.App"
@@ -17,11 +15,14 @@
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
         <activity
+            android:name=".main.MainActivity"
+            android:launchMode="singleTop"
+            android:label="@string/title_activity_main"></activity>
+        <activity
             android:name=".getStarted.GetStartedActivity"
-            android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity
-            android:name=".SplashActivity"
+            android:name=".splash.SplashActivity"
             android:label="@string/app_name"
             android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar.Splash">
