--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -16,8 +16,7 @@
         android:theme="@style/AppTheme">
         <activity
             android:name=".main.MainActivity"
-            android:launchMode="singleTop"
-            android:label="@string/title_activity_main"></activity>
+            android:launchMode="singleTop"/>
         <activity
             android:name=".getStarted.GetStartedActivity"
             android:theme="@style/AppTheme.NoActionBar" />
