--- a/build.gradle
+++ b/build.gradle
@@ -6,6 +6,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.21'
+    ext.nav_version = '2.1.0-alpha02'
     repositories {
         google()
         jcenter()
@@ -17,6 +18,7 @@ buildscript {
     dependencies {
         classpath 'com.android.tools.build:gradle:3.3.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
+        classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath 'com.google.gms:google-services:4.2.0'
         classpath 'io.fabric.tools:gradle:1.26.1'
     }
