--- a/build.gradle
+++ b/build.gradle
@@ -7,6 +7,10 @@
 buildscript {
     ext.kotlin_version = '1.3.21'
     ext.nav_version = '2.1.0-alpha02'
+    ext.glide_version = '4.9.0'
+    ext.dagger_version = '2.22.1'
+    ext.arch_version = '1.1.1'
+    ext.leakcanary_version = '1.6.3'
     repositories {
         google()
         jcenter()
@@ -20,7 +24,9 @@ buildscript {
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
         classpath 'com.google.gms:google-services:4.2.0'
-        classpath 'io.fabric.tools:gradle:1.26.1'
+        classpath 'io.fabric.tools:gradle:1.28.1'
+        classpath 'com.quinn.hunter:hunter-debug-plugin:0.9.5'
+        classpath 'com.quinn.hunter:hunter-transform:0.9.3'
     }
 }
 
@@ -32,6 +38,11 @@ allprojects {
             url 'https://maven.google.com/'
         }
         
+    }
+    afterEvaluate {
+        tasks.withType(JavaCompile.class) {
+            options.compilerArgs << "-Xmaxerrs" << "500"
+        }
     }
 }
 
