--- a/app/build.gradle
+++ b/app/build.gradle
@@ -37,6 +37,9 @@ android {
     dataBinding {
         enabled = true
     }
+    packagingOptions {
+        pickFirst 'META-INF/atomicfu.kotlin_module'
+    }
 }
 
 
@@ -60,6 +63,8 @@ dependencies {
     implementation 'androidx.annotation:annotation:1.0.2'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     implementation 'com.quinn.hunter:hunter-debug-library:0.9.4'
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
+    implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "android.arch.lifecycle:extensions:$arch_version"
     implementation "android.arch.lifecycle:viewmodel:$arch_version"
     implementation "androidx.navigation:navigation-fragment-ktx:$nav_version"
