--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ buildscript {
     ext.dagger_version = '2.22.1'
     ext.arch_version = '1.1.1'
     ext.leakcanary_version = '1.6.3'
+    ext.coroutines_version = '1.2.0'
     repositories {
         google()
         jcenter()
