--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -17,7 +17,7 @@
         <activity
             android:name=".main.MainActivity"
             android:launchMode="singleTop"
-            android:theme="@style/AppTheme.NoActionBar"/>
+            android:theme="@style/AppTheme.NoActionBar.ColoredStatusBar"/>
         <activity
             android:name=".getStarted.GetStartedActivity"
             android:theme="@style/AppTheme.NoActionBar" />
