--- a/build.gradle
+++ b/build.gradle
@@ -6,7 +6,7 @@
 
 buildscript {
     ext.kotlin_version = '1.3.31'
-    ext.nav_version = '2.1.0-alpha05'
+    ext.nav_version = '2.1.0-beta02'
     ext.glide_version = '4.9.0'
     ext.dagger_version = '2.22.1'
     ext.arch_version = '1.1.1'
@@ -21,10 +21,10 @@ buildscript {
         
     }
     dependencies {
-        classpath 'com.android.tools.build:gradle:3.4.1'
+        classpath 'com.android.tools.build:gradle:3.4.2'
         classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:$kotlin_version"
         classpath "androidx.navigation:navigation-safe-args-gradle-plugin:$nav_version"
-        classpath 'com.google.gms:google-services:4.2.0'
+        classpath 'com.google.gms:google-services:4.3.0'
         classpath 'io.fabric.tools:gradle:1.28.1'
         classpath 'com.quinn.hunter:hunter-debug-plugin:0.9.5'
         classpath 'com.quinn.hunter:hunter-transform:0.9.3'
