--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -7,6 +7,7 @@
     <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
 
     <!--Support picture-in-picture for video player-->
+    <uses-permission android:name="android.permission.VIBRATE" />
     <application
         android:name=".common.App"
         android:allowBackup="true"
