--- a/app/build.gradle
+++ b/app/build.gradle
@@ -68,6 +68,7 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.0.1'
     implementation 'com.google.firebase:firebase-firestore-ktx:20.2.0'
     implementation 'com.google.android:flexbox:1.1.0'
+    implementation 'com.reddit:indicator-fast-scroll:1.1.0'
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:$coroutines_version"
     implementation "org.jetbrains.kotlinx:kotlinx-coroutines-android:$coroutines_version"
     implementation "android.arch.lifecycle:extensions:$arch_version"
