--- a/build.gradle
+++ b/build.gradle
@@ -12,6 +12,7 @@ buildscript {
     ext.arch_version = '1.1.1'
     ext.leakcanary_version = '1.6.3'
     ext.coroutines_version = '1.2.0'
+    ext.exoplayer_version = '2.10.4'
     repositories {
         google()
         jcenter()
