Fixed collage loading  determinant bug in BaseCollageDataFetcher

--- a/gradle.properties
+++ b/gradle.properties
@@ -25,4 +25,5 @@ android.enableJetifier=true
 kotlin.code.style=official
 android.enableUnitTestBinaryResources=true
 android.debug.obsoleteApi=true
+kapt.incremental.apt=true
 
