--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,7 +10,8 @@
     <uses-permission android:name="android.permission.VIBRATE" />
 
 
-    <!-- Support picture-in-picture for video player -->
+    <!-- TODO: Support picture-in-picture for video player -->
+    <!-- TODO: Support in app updates -->
     <application
         android:name=".common.App"
         android:allowBackup="true"
