--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,16 +2,9 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     package="com.jadebyte.jadeplayer">
 
-    <uses-permission android:name="android.permission.INTERNET" />
-    <!-- For Glide to restart connection requests when internet comes up -->
-    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
-    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
-    <uses-permission android:name="android.permission.VIBRATE" />
-
-
     <!-- TODO: Support picture-in-picture for video player -->
     <!-- TODO: Support in app updates -->
+
     <application
         android:name=".common.App"
         android:allowBackup="true"
@@ -20,22 +13,15 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <service
-            android:name=".main.playback.PlaybackService"
-            android:enabled="true"
-            android:exported="true">
-            <intent-filter>
-                <action android:name="android.media.browse.MediaBrowserService"/>
-            </intent-filter>
-        </service>
-
         <activity
             android:name=".main.MainActivity"
             android:launchMode="singleTop"
             android:theme="@style/AppTheme.NoActionBar.ColoredStatusBar" />
+
         <activity
             android:name=".getStarted.GetStartedActivity"
             android:theme="@style/AppTheme.NoActionBar.DarkTheme" />
+
         <activity
             android:name=".splash.SplashActivity"
             android:label="@string/app_name"
@@ -51,6 +37,28 @@
             android:name=".onBoarding.OnBoardingActivity"
             android:noHistory="true"
             android:theme="@style/AppTheme.NoActionBar.DarkTheme" />
+
+        <receiver android:name="androidx.media.session.MediaButtonReceiver">
+            <intent-filter>
+                <action android:name="android.intent.action.MEDIA_BUTTON" />
+            </intent-filter>
+        </receiver>
+
+        <service
+            android:name=".main.playback.PlaybackService"
+            android:enabled="true"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.media.browse.MediaBrowserService" />
+            </intent-filter>
+        </service>
     </application>
+
+    <!-- For Glide to restart connection requests when internet comes up -->
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.INTERNET" />
 
 </manifest>
