--- a/build.gradle
+++ b/build.gradle
@@ -13,6 +13,7 @@ buildscript {
     ext.coroutines_version = '1.2.0'
     ext.exoplayer_version = '2.10.4'
     ext.koin_version = '2.0.1'
+    ext.roomVersion = '2.2.0-rc01'
     repositories {
         google()
         jcenter()
