--- a/build.gradle
+++ b/build.gradle
@@ -6,14 +6,14 @@
 
 buildscript {
     ext.kotlin_version = '1.3.50'
-    ext.nav_version = '2.2.0-alpha03'
+    ext.nav_version = '2.2.0-beta01'
     ext.glide_version = '4.10.0'
     ext.arch_version = '1.1.1'
-    ext.leakcanary_version = '1.6.3'
+    ext.leakcanary_version = '2.0-beta-3'
     ext.coroutines_version = '1.2.0'
     ext.exoplayer_version = '2.10.4'
     ext.koin_version = '2.0.1'
-    ext.roomVersion = '2.2.0-rc01'
+    ext.roomVersion = '2.2.0'
     repositories {
         google()
         jcenter()
